Fixed Dependency issues. Fixed maven packaging issues. Added ENV var to fix Lua issues.