@@ -12,10 +12,20 @@ export DBX_REDIRECT_URL=http://localhost:5173/account/dropbox
 export GOOGLE_CLIENT_ID=
 export GOOGLE_CLIENT_SECRET=
 export GOOGLE_REDIRECT_URI=http://localhost:5173/account/google
+export JAVA_TOOL_OPTIONS="--add-opens=java.base/java.util=ALL-UNNAMED"
+
 
 # mvn clean compile
 # mvn exec:java -Dexec.mainClass="org.texttechnologylab.duui.api.Main"
-mvn clean package
-java -jar target/DUUIRestService.jar
+mvn clean -Dstyle.color=never -Djansi.strip=true package
+#java -jar target/DUUIRestService-1.0-all.jar
 
-#mvn compile exec:java
+#mvn -q -DskipTests package
+#
+## Confirm no signatures inside the fat jar
+#jar tf target/*-all.jar | egrep 'META-INF/.*\.(SF|DSA|RSA|EC)' || echo "no signatures"
+#
+## (optional) confirm uimaFIT indices exist
+#jar tf target/*-all.jar | grep 'META-INF/org.apache.uima.fit/'
+#
+java -jar target/DUUIRestService-1.0-all.jar
